pull from 'status' not 'permitstatus'

--- a/pages/li-demolitions.html
+++ b/pages/li-demolitions.html
@@ -65,7 +65,7 @@ download: https://www.opendataphilly.org/dataset/licenses-and-inspections-demoli
       "domain": "phl.carto.com",
       "dataset": "li_demolitions",
       "chartType": "pie",
-      "groupBy": "permitstatus"
+      "groupBy": "status"
     }
   ],
   [
