--- a/pages/li-commercial-activity-licenses.html
+++ b/pages/li-commercial-activity-licenses.html
@@ -1,17 +1,17 @@
 ---
-title: L&I Demolitions
+title: L&I Commercial Activity Licenses
 description: |
-  <p>Inventory of building demolitions occurring within the City of Philadelphia. This includes both demolitions performed by private owners/contractors and by the Dpt of Licenses and Inspections due to dangerous building conditions</p>
-download: https://www.opendataphilly.org/dataset/licenses-and-inspections-demolitions
+  <p>Commercial Activity Licenses are required by entities doing business in the City of Philadelphia. Information includes license number, application date, issuance date, applicant information, business entity name and other related information.</p>
+download: https://www.opendataphilly.org/dataset/licenses-and-inspections-commercial-activity-licenses
 ---
 [
   [
     {
-      "title": "Demolition Date",
-      "description": "Date building permit or L+I contractor bid was closed.",
+      "title": "Issue Date",
+      "description": "When the Commercial Activity License was issued.",
       "provider": "carto",
       "domain": "phl.carto.com",
-      "dataset": "li_demolitions",
+      "dataset": "li_com_act_licenses",
       "chartType": "datetime",
       "groupBy": "date_trunc('month', completed_date)",
       "triggerField": "completed_date",
@@ -28,64 +28,51 @@ download: https://www.opendataphilly.org/dataset/licenses-and-inspections-demoli
   ],
   [
     {
-      "title":  "Census Tract",
+      "title": "Commercial Activity Licenses Type",
+      "description": "Type of Commercial Activity License.",
       "provider": "carto",
       "domain": "phl.carto.com",
-      "dataset": "li_demolitions",
-      "chartType": "choropleth",
-      "groupBy": "censustract",
-      "boundaries": "https://phl.carto.com/api/v2/sql?q=select+*+from+census_tracts_2010&format=geojson",
-      "boundariesLabel": "namelsad10",
-      "boundariesId": "name10_padded"
+      "dataset": "li_com_act_licenses",
+      "chartType": "pie",
+      "groupBy": "licensetype"
     },
     {
-      "title": "Demolition Type",
-      "description": "The type of demolition. 'Permit' means a demolition was an action of a private owner, who was issued a building permit from L+I. 'Violation Case' means the demolition was an action of the Department of License and Inspections, due to dangerous building conditions, as a result of violation of the city's building code.",
+      "title": "Legal Entity Type",
+      "description": "Type of Legal Entity that holds License.",
       "provider": "carto",
       "domain": "phl.carto.com",
-      "dataset": "li_demolitions",
+      "dataset": "li_com_act_licenses",
       "chartType": "pie",
-      "groupBy": "record_type"
+      "groupBy": "legalentitytype"
     }
   ],
   [
     {
-      "title": "Owner Name",
-      "description": "Owner of the property as identified by the Office of Property Assessment.",
+      "title": "Company Name",
+      "description": "Name of company that holds the Commercial Activity License",
       "provider": "carto",
       "domain": "phl.carto.com",
-      "dataset": "li_demolitions",
+      "dataset": "li_com_act_licenses",
       "chartType": "bar",
-      "groupBy": "ownername"
+      "groupBy": "companyname"
     },
     {
       "title": "Status",
-      "description": "Status of the demolition",
+      "description": "Status of Commercial Activity License.",
       "provider": "carto",
       "domain": "phl.carto.com",
-      "dataset": "li_demolitions",
+      "dataset": "li_com_act_licenses",
       "chartType": "pie",
-      "groupBy": "status"
+      "groupBy": "licensestatus"
     }
   ],
   [
     {
-      "title": "Applicant Capacity",
-      "description": "Current owner of the property",
-      "provider": "carto",
-      "domain": "phl.carto.com",
-      "dataset": "li_demolitions",
-      "chartType": "bar",
-      "groupBy": "applicantcapacity"
-    }
-  ],
-  [
-    {
-      "title": "Demolitions",
+      "title": "Commercial Activity Licenses",
       "chartType": "table",
       "provider": "carto",
       "domain": "phl.carto.com",
-      "dataset": "li_demolitions",
+      "dataset": "li_com_act_licenses",
       "columnsToHide": [
         "cartodb_id",
         "objectid",
