added missing comma

--- a/pages/li-commercial-activity-licenses.html
+++ b/pages/li-commercial-activity-licenses.html
@@ -19,7 +19,7 @@ download: https://www.opendataphilly.org/dataset/licenses-and-inspections-commer
   ],
   [
     {
-      "title": "Commercial Activity Licenses Type",
+      "title": "Type",
       "description": "Type of Commercial Activity License.",
       "provider": "carto",
       "domain": "phl.carto.com",
@@ -34,7 +34,7 @@ download: https://www.opendataphilly.org/dataset/licenses-and-inspections-commer
       "domain": "phl.carto.com",
       "dataset": "li_com_act_licenses",
       "chartType": "pie",
-      "groupBy": "legalentitytype"
+      "groupBy": "legalentitytype",
     }
   ],
   [
@@ -54,7 +54,7 @@ download: https://www.opendataphilly.org/dataset/licenses-and-inspections-commer
       "domain": "phl.carto.com",
       "dataset": "li_com_act_licenses",
       "chartType": "pie",
-      "groupBy": "licensestatus"
+      "groupBy": "licensestatus",
     }
   ],
   [
