--- a/pages/li-demolitions.html
+++ b/pages/li-demolitions.html
@@ -71,7 +71,7 @@ download: https://www.opendataphilly.org/dataset/licenses-and-inspections-demoli
   [
     {
       "title": "Applicant Capacity",
-      "description": "Current owner of the property",
+      "description": "Type of applicant on record with private permit",
       "provider": "carto",
       "domain": "phl.carto.com",
       "dataset": "li_demolitions",
