--- a/pages/energy-properties-not-reported-2016.html
+++ b/pages/energy-properties-not-reported-2016.html
@@ -1,11 +1,9 @@
 ---
-title: 311 Service and Information Requests
+title: Large Building Energy Benchmarking Data Properties Not Reported 2016
 description: |
-  <p>This represents service and information requests since December 8th, 2014
-      submitted to Philly311 via the 311 mobile application, calls, walk-ins,
-      emails, the 311 website or social media.
+  <p>This dataset contains annual building and performance data for those properties which reported between years 2013 to 2016. Property data is pulled from the Office of Property Assessment. Data is self-reported by building owners using the EPA Portfolio Manager tool. This data will be updated annually.
     </p>
-download: https://www.opendataphilly.org/dataset/311-service-and-information-requests
+download: https://www.opendataphilly.org/dataset/large-commercial-building-energy-benchmarking
 ---
 [
   [
@@ -14,7 +12,7 @@ download: https://www.opendataphilly.org/dataset/311-service-and-information-req
       "description": "The date when the service request was made",
       "provider": "carto",
       "domain": "phl.carto.com",
-      "dataset": "public_cases_fc",
+      "dataset": "properties_not_reported_2016",
       "chartType": "datetime",
       "groupBy": "date_trunc('month', requested_datetime)",
       "triggerField": "requested_datetime"
@@ -22,12 +20,12 @@ download: https://www.opendataphilly.org/dataset/311-service-and-information-req
   ],
   [
     {
-      "title":  "Zip Code",
+      "title":  "Location",
       "provider": "carto",
       "domain": "phl.carto.com",
-      "dataset": "public_cases_fc",
+      "dataset": "properties_not_reported_2016",
       "chartType": "choropleth",
-      "groupBy": "zipcode",
+      "groupBy": "address",
       "boundaries": "https://phl.carto.com/api/v2/sql?q=select+*+from+zip_codes&format=geojson",
       "boundariesLabel": "code",
       "boundariesId": "code"
@@ -37,7 +35,7 @@ download: https://www.opendataphilly.org/dataset/311-service-and-information-req
       "description": "Name of the service request type",
       "provider": "carto",
       "domain": "phl.carto.com",
-      "dataset": "public_cases_fc",
+      "dataset": "properties_not_reported_2016",
       "chartType": "bar",
       "groupBy": "service_name"
     }
@@ -48,7 +46,7 @@ download: https://www.opendataphilly.org/dataset/311-service-and-information-req
       "description": "The department in charge of the service request",
       "provider": "carto",
       "domain": "phl.carto.com",
-      "dataset": "public_cases_fc",
+      "dataset": "properties_not_reported_2016",
       "chartType": "bar",
       "groupBy": "agency_responsible"
     },
@@ -57,7 +55,7 @@ download: https://www.opendataphilly.org/dataset/311-service-and-information-req
       "description": "Status of the service request",
       "provider": "carto",
       "domain": "phl.carto.com",
-      "dataset": "public_cases_fc",
+      "dataset": "properties_not_reported_2016",
       "chartType": "pie",
       "groupBy": "status"
     }
@@ -69,7 +67,7 @@ download: https://www.opendataphilly.org/dataset/311-service-and-information-req
       "provider": "carto",
       "domain": "phl.carto.com",
       "order": "requested_datetime desc",
-      "dataset": "public_cases_fc",
+      "dataset": "properties_not_reported_2016",
       "columnsToHide": [
         "cartodb_id",
         "objectid",
