Update zip -> zip_code

--- a/pages/real-estate-tax-delinquencies.html
+++ b/pages/real-estate-tax-delinquencies.html
@@ -33,7 +33,7 @@ download: https://www.opendataphilly.org/dataset/real-estate-tax-delinquencies
       "domain": "phl.carto.com",
       "dataset": "real_estate_tax_delinquencies",
       "chartType": "choropleth",
-      "groupBy": "zip",
+      "groupBy": "zip_code",
       "boundaries": "https://phl.carto.com/api/v2/sql?q=select+*+from+zip_codes&format=geojson",
       "boundariesLabel": "code",
       "boundariesId": "code"
