--- a/pages/real-estate-tax-delinquencies.html
+++ b/pages/real-estate-tax-delinquencies.html
@@ -1,10 +1,35 @@
 ---
 title: Real Estate Tax Delinquencies
 description: |
-  <p></p>
+  This data updates monthly and includes accounts which are "not actionable," such as
+  accounts in payment agreement, accounts that are overdue but not yet delinquent, and
+  accounts that are in bankruptcy.
 download: https://www.opendataphilly.org/dataset/real-estate-tax-delinquencies
+metadata: http://metadata.phila.gov/#home/datasetdetails/57d9643afab162fe2708224e/representationdetails/57d9643cfab162fe27082252/?view_287_per_page=500&view_287_page=1
 ---
 [
+  [
+    {
+      "title": "Total due",
+      "description": "By default, this includes accounts that are not actionable. To view the actionable amount, select the \"true\" slice of the \"actionable accounts\" chart to the right.",
+      "provider": "carto",
+      "domain": "phl.carto.com",
+      "dataset": "real_estate_tax_delinquencies",
+      "chartType": "callout",
+      "aggregateFunction": "sum",
+      "aggregateField": "total_due",
+      "valueFormat": "$0,0"
+    },
+    {
+      "title": "Actionable accounts",
+      "description": "Accounts that are in payment agreement, bankruptcy, or overdue but not yet delinquent are considered not actionable",
+      "provider": "carto",
+      "domain": "phl.carto.com",
+      "dataset": "real_estate_tax_delinquencies",
+      "chartType": "pie",
+      "groupBy": "is_actionable"
+    }
+  ],
   [
     {
       "title": "Number of properties by years owed",
@@ -50,6 +75,7 @@ download: https://www.opendataphilly.org/dataset/real-estate-tax-delinquencies
   [
     {
       "title": "Real Estate Tax Delinquencies",
+      "description": "To export this table with current filters applied, click the menu icon to the right.",
       "chartType": "table",
       "provider": "carto",
       "domain": "phl.carto.com",
