--- a/pages/real-estate-transfers.html
+++ b/pages/real-estate-transfers.html
@@ -55,6 +55,7 @@ download: https://www.opendataphilly.org/dataset/real-estate-transfers
 [
   {
     "title": "Real Estate Transfers",
+    "description": "To export this table with current filters applied, click the menu icon to the right.",
     "chartType": "table",
     "provider": "carto",
     "domain": "phl.carto.com",
