--- a/pages/parking-violations.html
+++ b/pages/parking-violations.html
@@ -16,8 +16,8 @@ download: https://www.opendataphilly.org/dataset/parking-violations
       "domain": "phl.carto.com",
       "dataset": "parking_violations",
       "chartType": "datetime",
-      "groupBy": "date_trunc('month', issue_date_and_time)",
-      "triggerField": "issue_date_and_time"
+      "groupBy": "date_trunc('month', issue_datetime)",
+      "triggerField": "issue_datetime"
     },
     {
       "title":"Zip Code",
@@ -25,7 +25,7 @@ download: https://www.opendataphilly.org/dataset/parking-violations
       "domain": "phl.carto.com",
       "dataset": "parking_violations",
       "chartType": "choropleth",
-      "groupBy": "violation_location_zip",
+      "groupBy": "zip_code",
       "boundaries": "https://phl.carto.com/api/v2/sql?q=select+*+from+zip_codes&format=geojson",
       "boundariesLabel": "code",
       "boundariesId": "code"
@@ -39,7 +39,7 @@ download: https://www.opendataphilly.org/dataset/parking-violations
       "domain": "phl.carto.com",
       "dataset": "parking_violations",
       "chartType": "bar",
-      "groupBy": "violation_description"
+      "groupBy": "violation_desc"
     },
     {
       "title":"Issuing Agency",
@@ -58,7 +58,7 @@ download: https://www.opendataphilly.org/dataset/parking-violations
       "provider": "carto",
       "domain": "phl.carto.com",
       "dataset": "parking_violations",
-      "order": "issue_date_and_time desc",
+      "order": "issue_datetime desc",
       "columnsToHide": [
         "cartodb_id",
         "objectid",
