--- a/pages/prison-releases.html
+++ b/pages/prison-releases.html
@@ -1,7 +1,7 @@
 ---
 title: Philadelphia Prison & Jail Releases
 description: |
-  Proof of concept visualization for internal use only. Shows a subset of de-identified data.
+  This dataset includes people released to Philadelphia from the Philadelphia Department of Prisons (PDP) and the Pennsylvania Department of Correction (PA DOC). It only includes people released to Philadelphia who have been charged with a criminal non-summary type offense in the Philadelphia adult criminal justice system.
 ---
 [
   [
