--- a/pages/prison-releases.html
+++ b/pages/prison-releases.html
@@ -16,7 +16,7 @@ description: |
     },
     {
       "title": "Releases by correctional facility",
-      "description": "Individual-level data for releases from Federal (BOP) incarceration was not available, and is less than 2% in the years analyzed.
+      "description": "Individual-level data for releases from Federal (BOP) incarceration was not available, and is less than 2% in the years analyzed",
       "provider": "carto",
       "domain": "phl.carto.com",
       "dataset": "pdp_state_releases",
