--- a/pages/prison-releases.html
+++ b/pages/prison-releases.html
@@ -55,7 +55,7 @@ description: |
       "groupBy": "race_ethnicity"
     },
     {
-      "title": "Releases by gender",
+      "title": "Releases by sex",
       "provider": "carto",
       "domain": "phl.carto.com",
       "dataset": "pdp_state_releases",
