--- a/pages/prison-releases.html
+++ b/pages/prison-releases.html
@@ -9,7 +9,7 @@ description: |
       "title": "Releases by year",
       "provider": "carto",
       "domain": "phl.carto.com",
-      "dataset": "pdp_state_releases",
+      "dataset": "pdp_state_releases_age_range",
       "chartType": "bar",
       "groupBy": "year",
       "triggerField": "year"
@@ -19,7 +19,7 @@ description: |
       "description": "Individual-level data for releases from Federal (BOP) incarceration was not available, and is less than 2% in the years analyzed",
       "provider": "carto",
       "domain": "phl.carto.com",
-      "dataset": "pdp_state_releases",
+      "dataset": "pdp_state_releases_age_range",
       "chartType": "pie",
       "groupBy": "custody_agency"
     }
@@ -37,7 +37,7 @@ description: |
       "title":  "Zip Code",
       "provider": "carto",
       "domain": "phl.carto.com",
-      "dataset": "pdp_state_releases",
+      "dataset": "pdp_state_releases_age_range",
       "chartType": "choropleth",
       "groupBy": "zip",
       "boundaries": "https://phl.carto.com/api/v2/sql?q=select+*+from+zip_codes&format=geojson",
@@ -50,7 +50,7 @@ description: |
       "title": "Releases by race",
       "provider": "carto",
       "domain": "phl.carto.com",
-      "dataset": "pdp_state_releases",
+      "dataset": "pdp_state_releases_age_range",
       "chartType": "pie",
       "groupBy": "race_ethnicity"
     },
@@ -58,7 +58,7 @@ description: |
       "title": "Releases by sex",
       "provider": "carto",
       "domain": "phl.carto.com",
-      "dataset": "pdp_state_releases",
+      "dataset": "pdp_state_releases_age_range",
       "chartType": "pie",
       "groupBy": "sex"
     }
@@ -69,7 +69,7 @@ description: |
       "chartType": "table",
       "provider": "carto",
       "domain": "phl.carto.com",
-      "dataset": "pdp_state_releases",
+      "dataset": "pdp_state_releases_age_range",
       "order": "date_of_release desc",
       "columnsToHide": [
         "cartodb_id",
