--- a/pages/prison-releases.html
+++ b/pages/prison-releases.html
@@ -1,12 +1,12 @@
 ---
-title: Philadelphia Prison & Jail Releases
+title: People released to Philadelphia from prison & jail
 description: |
-  This dataset includes people released to Philadelphia from the Philadelphia Department of Prisons (PDP) and the Pennsylvania Department of Correction (PA DOC). It only includes people released to Philadelphia who have been charged with a criminal non-summary type offense in the Philadelphia adult criminal justice system.
+  This dataset includes people released to Philadelphia from the Philadelphia Department of Prisons (PDP) and the Pennsylvania Department of Correction (PA DOC). Individual-level data for releases from Federal (BOP) incarceration was not available, and is less than 2% in the years analyzed. The dataset also only includes people released to Philadelphia who have been charged with a criminal non-summary type offense in the Philadelphia adult criminal justice system.
 ---
 [
   [
     {
-      "title": "Releases by year",
+      "title": "By year",
       "provider": "carto",
       "domain": "phl.carto.com",
       "dataset": "pdp_state_releases_age_range",
@@ -15,8 +15,7 @@ description: |
       "triggerField": "year"
     },
     {
-      "title": "Releases by correctional facility",
-      "description": "Individual-level data for releases from Federal (BOP) incarceration was not available, and is less than 2% in the years analyzed",
+      "title": "By agency",
       "provider": "carto",
       "domain": "phl.carto.com",
       "dataset": "pdp_state_releases_age_range",
@@ -26,7 +25,7 @@ description: |
   ],
   [
     {
-      "title": "Releases by age",
+      "title": "By age",
       "provider": "carto",
       "domain": "phl.carto.com",
       "dataset": "pdp_state_releases_age_range",
@@ -34,7 +33,7 @@ description: |
       "groupBy": "age_range"
     },
     {
-      "title":  "Zip Code",
+      "title":  "By zip code",
       "provider": "carto",
       "domain": "phl.carto.com",
       "dataset": "pdp_state_releases_age_range",
@@ -47,7 +46,7 @@ description: |
   ],
   [
     {
-      "title": "Releases by race",
+      "title": "By race",
       "provider": "carto",
       "domain": "phl.carto.com",
       "dataset": "pdp_state_releases_age_range",
@@ -55,7 +54,7 @@ description: |
       "groupBy": "race_ethnicity"
     },
     {
-      "title": "Releases by sex",
+      "title": "By sex",
       "provider": "carto",
       "domain": "phl.carto.com",
       "dataset": "pdp_state_releases_age_range",
@@ -65,7 +64,7 @@ description: |
   ],
   [
     {
-      "title": "Releases",
+      "title": "People released to Philadelphia",
       "chartType": "table",
       "provider": "carto",
       "domain": "phl.carto.com",
