--- a/pages/prison-releases.html
+++ b/pages/prison-releases.html
@@ -3,6 +3,7 @@ title: People released to Philadelphia from prison & jail
 description: |
   <p>  This dataset includes people released to Philadelphia from the Philadelphia Department of Prisons (PDP) and the Pennsylvania Department of Correction (PA DOC). Individual-level data for releases from Federal (BOP) incarceration was not available, and is less than 2% in the years analyzed. The dataset also only includes people released to Philadelphia who have been charged with a criminal non-summary type offense in the Philadelphia adult criminal justice system. </p>
 download: https://www.opendataphilly.org/dataset/people-released-to-philadelphia-from-prison-jail
+metadata: http://metadata.phila.gov/#home/datasetdetails/5aa2d3a0fa1ccb42fc2b00df/representationdetails/5aa2d3a1fa1ccb42fc2b00e3/
 ---
 [
 	[
