--- a/pages/prison-releases.html
+++ b/pages/prison-releases.html
@@ -1,19 +1,24 @@
 ---
 title: People released to Philadelphia from prison & jail in 2015
 description: |
-  <p>  This dataset includes people released to Philadelphia from the Philadelphia Department of Prisons (PDP) and the Pennsylvania Department of Correction (PA DOC). Individual-level data for releases from Federal (BOP) incarceration was not available, and is less than 2% in the years analyzed. The dataset also only includes people released to Philadelphia who have been charged with a criminal non-summary type offense in the Philadelphia adult criminal justice system. </p>
+  This dataset includes people released to Philadelphia from the Philadelphia Department
+  of Prisons (PDP) and the Pennsylvania Department of Correction (PA DOC). Individual-level
+  data for releases from Federal (BOP) incarceration was not available, and makes up less than
+  2% of people released to Philadelphia in the year analyzed. The dataset also only includes people
+  released to Philadelphia who have been charged with a criminal non-summary type offense in the
+  Philadelphia adult criminal justice system.
 download: https://www.opendataphilly.org/dataset/people-released-to-philadelphia-from-prison-jail
 metadata: http://metadata.phila.gov/#home/datasetdetails/5aa2d3a0fa1ccb42fc2b00df/representationdetails/5aa2d3a1fa1ccb42fc2b00e3/
 ---
 [
 	[
     {
-      "title": "By age range",
+      "title": "By agency",
        "provider": "carto",
        "domain": "phl.carto.com",
        "dataset": "pdp_state_releases_age_range",
        "chartType": "bar",
-       "groupBy": "age_range"
+       "groupBy": "custody_agency"
 	   },
      {
        "title": "By zip code",
@@ -29,12 +34,12 @@ metadata: http://metadata.phila.gov/#home/datasetdetails/5aa2d3a0fa1ccb42fc2b00d
   ],
 	[
     {
-      "title": "By agency",
+      "title": "By age range",
      "provider": "carto",
      "domain": "phl.carto.com",
      "dataset": "pdp_state_releases_age_range",
      "chartType": "pie",
-     "groupBy": "custody_agency"
+     "groupBy": "age_range"
    },
 		{
 			"title": "By race",
