--- a/pages/real-estate-transfers.html
+++ b/pages/real-estate-transfers.html
@@ -27,7 +27,7 @@ download: https://www.opendataphilly.org/dataset/real-estate-transfers
     "domain": "phl.carto.com",
     "dataset": "rtt_summary",
     "chartType": "choropleth",
-    "groupBy": "zip",
+    "groupBy": "zip_code",
     "boundaries": "https://phl.carto.com/api/v2/sql?q=select+*+from+zip_codes&format=geojson",
     "boundariesLabel": "code",
     "boundariesId": "code"
