--- a/pages/real-estate-transfers.html
+++ b/pages/real-estate-transfers.html
@@ -1,5 +1,5 @@
 ---
-title: Real Estate Transfers
+title: Real estate transfers
 description: |
   <p>This dataset is a summary of real estate transfer tax documents. This table contains both raw source data as well as
     calculated and geocoded/data fields. Document type, grantor, and grantee information is presented by address for each transaction.</p>
@@ -21,8 +21,8 @@ download: https://www.opendataphilly.org/dataset/real-estate-transfers
 ],
   [
     {
-		"title":  "Zip Code",
-    "description": "Number of transactions in each zip code.",
+		"title":  "ZIP Code",
+    "description": "Number of transactions in each ZIP Code.",
     "provider": "carto",
     "domain": "phl.carto.com",
     "dataset": "rtt_summary",
@@ -33,7 +33,7 @@ download: https://www.opendataphilly.org/dataset/real-estate-transfers
     "boundariesId": "code"
 	},
 	{
-		"title": "Documents by Type",
+		"title": "Documents by type",
 		"description": "Shows the type of document involved in the real estate transfer.",
 		"provider": "carto",
 		"domain": "phl.carto.com",
@@ -44,17 +44,17 @@ download: https://www.opendataphilly.org/dataset/real-estate-transfers
 ],
   [
   	{
-		"title": "Number of Properties by Fair Market Value",
+		"title": "Number of properties by Fair Market Value",
 		"provider": "carto",
 		"domain": "phl.carto.com",
 		"dataset": "rtt_summary",
 		"chartType": "bar",
 		"groupBy": "fair_market_value"
-	}
+  	}
 ],
 [
   {
-    "title": "Real Estate Transfers",
+    "title": "Real estate transfers",
     "description": "To export this table with current filters applied, click the menu icon to the right.",
     "chartType": "table",
     "provider": "carto",
