--- a/pages/real-estate-transfers.html
+++ b/pages/real-estate-transfers.html
@@ -1,9 +1,10 @@
 ---
 title: Real estate transfers
 description: |
-  <p>This dataset is a summary of real estate transfer tax documents. This table contains both raw source data as well as
-    calculated and geocoded/data fields. Document type, grantor, and grantee information is presented by address for each transaction.</p>
+  This dataset is a summary of real estate transfer tax documents. This table contains both raw source data as well as
+    calculated and geocoded/data fields. Document type, grantor, and grantee information is presented by address for each transaction.
 download: https://www.opendataphilly.org/dataset/real-estate-transfers
+metadata: http://metadata.phila.gov/#home/datasetdetails/5a04b8d39202605970a7457d/representationdetails/5a04b8d39202605970a74581/
 
 ---
 [
