updated null value
changed to > 0

--- a/pages/real-estate-transfers.html
+++ b/pages/real-estate-transfers.html
@@ -55,8 +55,8 @@ metadata: http://metadata.phila.gov/#home/datasetdetails/5a04b8d39202605970a7457
       {
         "field": "fair_market_value",
       "expression": {
-          "type": "is not",
-          "value": null
+          "type": ">",
+          "value": 0
         }
       }
     ]
