--- a/pages/real-estate-transfers.html
+++ b/pages/real-estate-transfers.html
@@ -1,7 +1,7 @@
 ---
-title: Real estate transfers
+title: Real Estate Transfers
 description: |
-  This dataset is a summary of real estate transfer tax documents. This table contains both raw source data as well as
+  This dataset is a summary of Real Estate Transfer Tax documents. This table contains both raw source data as well as
     calculated and geocoded/data fields. Document type, grantor, and grantee information is presented by address for each transaction.
 download: https://www.opendataphilly.org/dataset/real-estate-transfers
 metadata: http://metadata.phila.gov/#home/datasetdetails/5a04b8d39202605970a7457d/representationdetails/5a04b8d39202605970a74581/
@@ -10,7 +10,7 @@ metadata: http://metadata.phila.gov/#home/datasetdetails/5a04b8d39202605970a7457
 [
   [
     {
-		"title": "Document Date",
+		"title": "Document date",
 		"description": "The monthly amount of document transactions.",
 		"chartType": "datetime",
 		"provider": "carto",
@@ -45,7 +45,7 @@ metadata: http://metadata.phila.gov/#home/datasetdetails/5a04b8d39202605970a7457
 ],
   [
   	{
-		"title": "Number of properties by Fair Market Value",
+		"title": "Number of properties by fair market value",
 		"provider": "carto",
 		"domain": "phl.carto.com",
 		"dataset": "rtt_summary",
