--- a/pages/real-estate-transfers.html
+++ b/pages/real-estate-transfers.html
@@ -11,7 +11,7 @@ metadata: http://metadata.phila.gov/#home/datasetdetails/5a04b8d39202605970a7457
   [
     {
 		"title": "Document date",
-		"description": "The monthly amount of document transactions.",
+		"description": "The monthly number of document transactions.",
 		"chartType": "datetime",
 		"provider": "carto",
 		"domain": "phl.carto.com",
@@ -23,7 +23,7 @@ metadata: http://metadata.phila.gov/#home/datasetdetails/5a04b8d39202605970a7457
   [
     {
 		"title":  "ZIP Code",
-    "description": "Number of transactions in each ZIP Code.",
+    "description": "The number of transactions in each ZIP Code.",
     "provider": "carto",
     "domain": "phl.carto.com",
     "dataset": "rtt_summary",
@@ -35,7 +35,7 @@ metadata: http://metadata.phila.gov/#home/datasetdetails/5a04b8d39202605970a7457
 	},
 	{
 		"title": "Documents by type",
-		"description": "Shows the type of document involved in the real estate transfer.",
+		"description": "Shows the number of documents by type involved in the real estate transfer.",
 		"provider": "carto",
 		"domain": "phl.carto.com",
 		"dataset": "rtt_summary",
@@ -45,7 +45,7 @@ metadata: http://metadata.phila.gov/#home/datasetdetails/5a04b8d39202605970a7457
 ],
   [
   	{
-		"title": "Number of properties by fair market value",
+		"title": "Number of transfers by fair market value",
 		"provider": "carto",
 		"domain": "phl.carto.com",
 		"dataset": "rtt_summary",
