--- a/pages/real-estate-transfers.html
+++ b/pages/real-estate-transfers.html
@@ -35,7 +35,7 @@ metadata: http://metadata.phila.gov/#home/datasetdetails/5a04b8d39202605970a7457
 	},
 	{
 		"title": "Documents by type",
-		"description": "Shows the number of documents by type involved in the real estate transfer.",
+		"description": "The number of documents by type involved in real estate transfers.",
 		"provider": "carto",
 		"domain": "phl.carto.com",
 		"dataset": "rtt_summary",
