--- a/pages/real-estate-transfers.html
+++ b/pages/real-estate-transfers.html
@@ -11,7 +11,7 @@ metadata: http://metadata.phila.gov/#home/datasetdetails/5a04b8d39202605970a7457
   [
     {
 		"title": "Document date",
-		"description": "The monthly number of document transactions.",
+		"description": "The monthly number of transfers.",
 		"chartType": "datetime",
 		"provider": "carto",
 		"domain": "phl.carto.com",
@@ -23,7 +23,7 @@ metadata: http://metadata.phila.gov/#home/datasetdetails/5a04b8d39202605970a7457
   [
     {
 		"title":  "ZIP Code",
-    "description": "The number of transactions in each ZIP Code.",
+    "description": "The number of transfers by ZIP Code.",
     "provider": "carto",
     "domain": "phl.carto.com",
     "dataset": "rtt_summary",
@@ -34,8 +34,8 @@ metadata: http://metadata.phila.gov/#home/datasetdetails/5a04b8d39202605970a7457
     "boundariesId": "code"
 	},
 	{
-		"title": "Documents by type",
-		"description": "The number of documents by type involved in real estate transfers.",
+		"title": "Documents type",
+		"description": "The number of transfers by document type.",
 		"provider": "carto",
 		"domain": "phl.carto.com",
 		"dataset": "rtt_summary",
@@ -45,7 +45,8 @@ metadata: http://metadata.phila.gov/#home/datasetdetails/5a04b8d39202605970a7457
 ],
   [
   	{
-		"title": "Number of transfers by fair market value",
+		"title": "Fair market value",
+    "description": "The number of transfers by fair market value.",
 		"provider": "carto",
 		"domain": "phl.carto.com",
 		"dataset": "rtt_summary",
