--- a/pages/employee-salaries.html
+++ b/pages/employee-salaries.html
@@ -45,9 +45,7 @@ download: https://www.opendataphilly.org/dataset/employee-salaries-overtime
         "objectid",
         "the_geom",
         "the_geom_webmercator",
-        "oid_",
-        "calendar_year",
-        "quarter"
+        "oid_"
       ]
     }
   ]
