--- a/pages/employee-salaries.html
+++ b/pages/employee-salaries.html
@@ -1,9 +1,12 @@
 ---
 title: Employee Salaries & Overtime
 description: |
-  <p>Note: Since employee counts fluctuate throughout the year, the sum of annual
-    salaries does not reflect the total budgeted amount.</p>
+  <p>Notes: Since employee counts fluctuate throughout the year, the sum of annual
+    salaries does not reflect the total budgeted amount. Also,
+    $0 annual salaries represent part-time, temporary, or seasonal employees paid
+    by the hour.</p>
 download: https://www.opendataphilly.org/dataset/employee-salaries-overtime
+metadata: http://metadata.phila.gov/#home/datasetdetails/5543865520583086178c4ebd/
 ---
 [
   [
