--- a/pages/li-business-licenses.html
+++ b/pages/li-business-licenses.html
@@ -10,6 +10,7 @@ description: |
   <p>Note: Some business licenses are incorrectly missing the associated address
   in this dataset, which may limit searching.</p>
 download: https://www.opendataphilly.org/dataset/licenses-and-inspections-business-licenses
+
 ---
 [
   [
@@ -20,8 +21,8 @@ download: https://www.opendataphilly.org/dataset/licenses-and-inspections-busine
       "domain": "phl.carto.com",
       "dataset": "li_business_licenses",
       "chartType": "datetime",
-      "groupBy": "date_trunc('month', to_date(issuedate, 'MM/DD/YYYY HH24:MI:SS'))",
-      "triggerField": "issuedate"
+      "groupBy": "date_trunc('month', initialissuedate)",
+      "triggerField": "initialissuedate"
     }
   ],
   [
