--- a/pages/employee-salaries.html
+++ b/pages/employee-salaries.html
@@ -14,7 +14,7 @@ metadata: http://metadata.phila.gov/#home/datasetdetails/5543865520583086178c4eb
       "title": "Total Salaries by Department",
       "provider": "carto",
       "domain": "phl.carto.com",
-      "dataset": "latest_employee_salaries",
+      "dataset": "employee_salaries",
       "chartType": "bar",
       "groupBy": "department",
       "triggerField": "department",
@@ -27,7 +27,7 @@ metadata: http://metadata.phila.gov/#home/datasetdetails/5543865520583086178c4eb
       "title": "Total YTD Overtimes Gross by Department",
       "provider": "carto",
       "domain": "phl.carto.com",
-      "dataset": "latest_employee_salaries",
+      "dataset": "employee_salaries",
       "chartType": "bar",
       "groupBy": "department",
       "triggerField": "department",
@@ -36,12 +36,30 @@ metadata: http://metadata.phila.gov/#home/datasetdetails/5543865520583086178c4eb
     }
   ],
   [
-    {
+  {
+    "title": "By calendar year",
+    "provider": "carto",
+    "domain": "phl.carto.com",
+    "dataset": "employee_salaries",
+    "chartType": "pie",
+    "groupBy": "calendar_year"
+  },
+  {
+    "title": "By quarter",
+    "provider": "carto",
+    "domain": "phl.carto.com",
+    "dataset": "employee_salaries",
+    "chartType": "pie",
+    "groupBy": "quarter"
+   }
+],
+[
+  {
       "title": "Employee Salaries",
       "chartType": "table",
       "provider": "carto",
       "domain": "phl.carto.com",
-      "dataset": "latest_employee_salaries",
+      "dataset": "employee_salaries",
       "order": "annual_salary desc",
       "columnsToHide": [
         "cartodb_id",
